<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">We Connect</string>
    <string name="app_name_caption">WC</string>
    <string name="action_settings">Settings</string>
    <string name="txt_landing_page_caption" tools:ignore="ExtraTranslation">Sign in</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_password_confirm"> Confirm password</string>
    <string name="input_name">Full name</string>
    <string name="input_phone_number">Phone number</string>
    <string name="text_view_welcome">Welcome back</string>
    <string name="text_view_dont_have_account">Don`t have account</string>
    <string name="text_view_forgort_password">Forgot password?</string>
    <string name="text_view_already_have_account">Already have an account?</string>
    <string name="text_please_wait">Please wait</string>
    <string name="item_status">Status</string>
    <string name="text_tor">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="email_inputs">ABCDEFGHIJKLMNOPQRSTUVWXYZ_1234678910@abcdefghijklmnopqrstuvwxyz.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="developed_by">Developed by Shane &amp; Thima</string>
    <string name="password_reset_caption">Please provide your email to reset your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_available">Available</string>
    <string name="input_lastname">Last name</string>
    <string name="txt_bottom_nav_home">Home</string>
    <string name="txt_bottom_nav_people">People</string>
    <string name="txt_account">Account</string>
    <string name="txt_about">About</string>
    <string name="txt_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_save_changes">Save Changes</string>
    <string name="friend_status_text">status:</string>
    <string name="friend_username_text">username</string>
    <string name="friend_online_text">online</string>
    <string name="profile_username_text">Khotsoka Shane</string>
    <string name="txt_bottom_nav_chat">Chat</string>
    <string name="ignore_text">ignore</string>
    <string name="username_text">username</string>
    <string name="approve_text">approve</string>
    <string name="nav_requests_text">Requests</string>
    <string name="nav_profile_text">profile</string>
    <string name="add_friend_text">add friend</string>
    <string name="your_comment_hint_text">Your Comment here…</string>
    <string name="loading_comment_text">Loading Comment…</string>
    <string name="txt_write_a_feed">Write a feed</string>
    <string name="txt_post">Post</string>
    <string name="comment_time_text">20:00</string>
</resources>