<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:title="@string/txt_bottom_nav_home"
        android:icon="@drawable/baseline_home_black_24dp" />
    <item
        android:id="@+id/bottom_nav_friends"
        android:title="@string/txt_bottom_nav_people"
        android:icon="@drawable/baseline_people_alt_black_24dp"
        />

    <!--<item
        android:id="@+id/bottom_nav_requests"
        android:title="@string/nav_requests_text"
        android:icon="@drawable/baseline_people_alt_black_24dp"
        />-->

    <item
        android:id="@+id/bottom_nav_chat"
        android:title="@string/txt_bottom_nav_chat"
        android:icon="@drawable/ic_chat"/>

    <item
        android:id="@+id/bottom_nav_profile"
        android:title="@string/nav_profile_text"
        android:icon="@drawable/baseline_account_circle_black_24dp"/>
</menu>