<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/top_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <!--username textinput Edittext-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_email"
                    android:digits="@string/email_inputs"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--password textinput Edittext-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_username_txt"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password"
                    android:id="@+id/input_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--forgot password text view-->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reset_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_txt"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_view_forgort_password" />

            <!---login button design-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reset_password_tv"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="6dp" />

            <!---login button design-->
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/btn_sign_up"
                android:background="@color/gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:text="@string/btn_sign_up"
                android:textColor="@color/gray"
                android:textStyle="bold"
                app:strokeColor="@color/dodger_blue"
                app:strokeWidth="1dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/btn_sign_up"
                android:background="@color/gray" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>