<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--app icon imageview-->

        <!--child relative layout-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">


            <!--password textinput Edittext-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/InputName"
                    android:inputType="textPersonName"
                    android:hint="@string/input_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--lastname edittext-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_lastname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/login_password_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:id="@+id/InputLastname"
                    android:hint="@string/input_lastname" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--user email edittext-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/signup_lastname_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="@string/email_inputs"
                    android:hint="@string/input_email"
                    android:id="@+id/InputEmail"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--user password edittext-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/signup_email_txt"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/InputPassword"
                    android:hint="@string/input_password" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--user confirm password edittext-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_confirmpass_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/signup_password_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/InputConfirmPassword"
                    android:hint="@string/input_password_confirm" />

            </com.google.android.material.textfield.TextInputLayout>


            <!---login button design-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/btn_sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="6dp"
                android:layout_below="@id/signup_confirmpass_txt"/>

            <!--already have an account-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/sign_up_button">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/btn_have_account"
                    android:background="@color/black" />

                <!--<com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/text_view_already_have_account"
                    android:textColor="@color/white"
                    android:background="@color/deep_sky_blue"
                    android:textStyle="bold"

                    />-->


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_have_account"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/text_view_already_have_account"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:cornerRadius="6dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/btn_have_account"
                    android:background="@color/black" />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>