<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_gray"
    android:padding="5dp"
    android:id="@+id/blog_item">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                tools:ignore="UselessParent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/request_profile_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_account"
                    tools:ignore="ContentDescription,ObsoleteLayoutParam"
                    app:tint="@color/black" />

                <TextView
                    android:id="@+id/request_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/request_profile_image"
                    tools:ignore="ObsoleteLayoutParam,RtlSymmetry" />

                <RelativeLayout
                    android:id="@+id/requset_button_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/request_username"
                    android:layout_toEndOf="@id/request_profile_image"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="8dp"
                    android:layout_marginTop="5dp"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/request_accept_button"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:text="@string/approve_text"
                        android:textSize="12sp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/green"
                        app:cornerRadius="8dp"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/request_ignore_button"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:text="@string/ignore_text"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/red"
                        app:cornerRadius="8dp"
                        android:layout_toEndOf="@id/request_accept_button"
                        android:layout_marginStart="8dp"/>
                </RelativeLayout>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>